[package]
name = "ap"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Xion/ap"
readme = "README.md"

[dependencies]
clap = "2.0.5"
fnv = "1.0.2"
log = "0.3"
mopa = "0.2.1"
nom = { version = "1.1.0", features = ["regexp"] }
rand = "0.3"
regex = "0.1"
rustc-serialize = "0.3"
unicode-segmentation = "0.1.0"

[dev-dependencies]
maplit = "0.1.3"

# Note that "unit" tests (i.e. tests within code files) are not used,
# so we disable them for both library and binary targets.

[lib]
test = false
doctest = false

[[bin]]
name = "main"
test = false
doc = false
