[package]
name = "rush"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Xion/rush"

[dependencies]
conv = "0.3.1"
csv = "0.14.4"
fnv = "1.0.2"
lazy_static = "*"
log = "0.3"
mopa = "0.2.1"
nom = { version = "1.2.4", features = ["regexp"] }
rand = "0.3"
regex = "0.1"
rustc-serialize = "0.3"
unicode_categories = "0.1.0"
unicode-normalization = "0.1.2"
unicode-segmentation = "0.1.0"
unidecode = "0.2.0"

[dev-dependencies]
maplit = "0.1.3"


[lib]
doctest = false
