[package]
name = "rh"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Xion/rush"
readme = "../../README.md"
publish = false

[dependencies]
case = "*"
clap = { version = "2.2.4", features = ["suggestions"] }
conv = "0.3.1"
log = "0.3"
rush = { path = "../librush" }


[[bin]]
name = "rh"
path = "src/main.rs"
doc = false
